<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.actoresrecyclerview.ui.pantallamain.ActoresActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/medium_size"
        android:background="@color/purple"
        android:hint="@string/nombre"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/valoon" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_size"
        android:layout_marginTop="@dimen/small_size"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textViewPremiosOscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <RadioButton
            android:id="@+id/radioButtonHombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/valoon"
            android:text="@string/masculino">

        </RadioButton>

        <RadioButton
            android:id="@+id/radioButtonMujer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/valoon"
            android:text="@string/femenino">

        </RadioButton>

        <RadioButton
            android:id="@+id/radioButtonOtro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/valoon"
            android:text="@string/otro">
        </RadioButton>

    </RadioGroup>


    <TextView
        android:id="@+id/textViewPremiosOscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/valoon"
        android:text="@string/premios_scar"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/slider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginEnd="@dimen/medium_size"
        android:fontFamily="@font/valoon"
        android:text="@string/est_vivo"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider2" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_size"
        android:stepSize="1.0"
        android:valueFrom="0.0"
        android:valueTo="10.0"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginEnd="@dimen/medium_size"
        android:layout_marginBottom="@dimen/medium_size"
        android:hint="@string/pel_cula_famosa"
        app:layout_constraintBottom_toTopOf="@+id/updateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/peliculaFam"
            android:layout_width="@dimen/very_big_size"
            android:layout_height="wrap_content"
            android:fontFamily="@font/valoon"
 />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_size"
        android:fontFamily="@font/valoon"
        android:text="@string/actualizar_actor"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <ImageButton
        android:id="@+id/imageButtonBin"
        android:layout_width="@dimen/very_big_size"
        android:layout_height="@dimen/big_size"
        android:background="@color/purple"
        android:src="@drawable/trash_can"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@+id/updateButton" />

    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="@dimen/very_big_size"
        android:layout_height="@dimen/big_size"
        android:background="@color/purple"
        android:src="@drawable/add"
        android:layout_marginEnd="@dimen/very_very_small_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonBin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateButton" />

</androidx.constraintlayout.widget.ConstraintLayout>